--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <a href="./">WebStudio</a>
             <ul>
                 <li><a href="">Студія</a></li>
-                <li><a href=""></a>Портфоліо</li>
-                <li><a href=""></a>Контакти</li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>
             </ul>
         </nav>
         <ul>
@@ -88,12 +88,12 @@
             <ul>
                 <li>
                     <img src="./images/imgteam1.jpg" alt="Ігор Дем'яненко" width="270">
-                    <p>Ігор Дем'яненко </p>
+                    <h3>Ігор Дем'яненко </h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/imgteam2.jpg" alt="Ольга Рєпіна" width="270">
-                    <p>Ольга Рєпіна</p>
+                    <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
@@ -112,10 +112,12 @@
     </main>
     <footer>
         <a href="index.html">WebStudio</a>
-        <address>
-            м. Київ, пр-т Лесі Українки, 26 <br>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
-            <a href="tel:380961111111">+38 096 111 11 11</a>
+        <address> 
+            <ul>
+                <li> <a href="https://goo.gl/maps/c5YDyiYQSBMjpUKTA">м. Київ, пр-т Лесі Українки, 26</a> </li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
 
     </footer>
