--- a/index.html
+++ b/index.html
@@ -12,20 +12,31 @@
         <a href="./">WebStudio</a>
         <ul>
           <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a
+            href="mailto:info@devstudio.com"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            >info@devstudio.com
+          </a>
         </li>
         <li>
-          <a href="tel:380961111111">+38 096 111 11 11</a>
+          <a
+            href="tel:380961111111"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            >+38 096 111 11 11
+          </a>
         </li>
       </ul>
     </header>
     <main>
+      <!--hero-->
       <section>
         <h1>
           Ефективні рішення для <br />
@@ -33,6 +44,7 @@
         </h1>
         <button>Замовити послугу</button>
       </section>
+      <!--About as-->
       <section>
         <h2>Особливості</h2>
         <ul>
@@ -65,7 +77,9 @@
           </li>
         </ul>
       </section>
+      <!--our works-->
       <section>
+        
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
@@ -91,6 +105,7 @@
           </li>
         </ul>
       </section>
+      <!--team-->
       <section>
         <h2>Наша команда</h2>
         <ul>
